UCLALIB-242: Ensure long facet lists don't break the mobile-collapsible max-height

--- a/www/sites/all/themes/uclalib_omega/css/uclalib-omega.no-query.css
+++ b/www/sites/all/themes/uclalib_omega/css/uclalib-omega.no-query.css
@@ -1865,7 +1865,7 @@ span.views-field.views-field-field-donor-name-bookplates.bookplates-donor-gift:a
   transition: max-height .3s ease-in-out;
 }
 .mobile-collapsible.is-mobile.is-open .mobile-collapsible__content, .mobile-collapsible.is-mobile.is-open .pane-content {
-  max-height: 900px;
+  max-height: 2000px;
 }
 
 @media (min-width: 768px) {
